# rag-app

./: LICENSE  docker-compose.yml
app/: Dockerfile  app.py  utils.py
app/.streamlit/: config.toml
app/admin/: Dockerfile  pyproject.toml
app/admin/.streamlit/: config.toml
app/admin/src/: app.py  utils.py
app/src/: app.py  utils.py
app/src/components/: __init__.py  chat_interface.py  knowledge_base.py
app/user/: Dockerfile  config.yml  pyproject.toml
app/user/.streamlit/: config.toml
app/user/src/: app.py  consts.py  utils.py
backend/: Dockerfile  constants.py  database.ini  db.py  main.py
backend/src/: consts.py  main.py  models.py  utils.py
backend/src/database/: __init__.py  config.py  connect.py
scripts/: init.sql
server/: Dockerfile  main.py  pyproject.toml
