[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Arunprakaash <prakaasharun50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
langchain = "^0.2.14"
google-generativeai = "^0.7.2"
psycopg2 = "^2.9.9"
langchain-community = "^0.2.12"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"
pypdf = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
